Fix bug where scrollbar would sometimes appear.
* Add borders between ships.

--- a/sass/xwing.sass
+++ b/sass/xwing.sass
@@ -9,7 +9,8 @@ $xwing_icons_png: '../images/xwing-icons.png'
 .ship-container > .row-fluid
   padding: 10px 0px
 
-.select2-container
+.ship
+  border: medium solid black
 
 .card-stat
   font-weight: bold
@@ -134,3 +135,6 @@ img.icon-crit
   width: 25px
   height: 25px
   background-position-x: -227px
+
+div.tab-content
+  overflow: none
